<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="#0099cc"
    tools:context="ru.liftelectronica.pdldronepult.SettingsActivity">

    <org.apmem.tools.layouts.FlowLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/profileBar"
        >
        <Spinner
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:id="@+id/spProfile"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <Button
            android:layout_width="60dp"
            android:layout_height="fill_parent"
            android:text="@string/send"
            android:textSize="10sp"
            android:id="@+id/btnSend"
            android:layout_alignTop="@+id/spProfile"
            android:gravity="center"
            android:layout_toRightOf="@+id/spProfile"
            android:onClick="onBtnSend" />
        <Button
            android:layout_width="60dp"
            android:layout_height="fill_parent"
            android:layout_alignTop="@+id/spProfile"
            android:layout_toRightOf="@+id/btnSend"
            android:gravity="center"
            android:text="@string/save_as"
            android:textSize="10sp"
            android:id="@+id/btnSaveAs"
            android:onClick="onBtnSaveAs"/>
        <Button
            android:layout_width="80dp"
            android:layout_height="fill_parent"
            android:layout_alignTop="@+id/spProfile"
            android:layout_toRightOf="@+id/btnSaveAs"
            android:gravity="center"
            android:text="@string/remove"
            android:textSize="10sp"
            android:id="@+id/btnRemove"
            android:onClick="onBtnRemove"/>
        <Button
            android:layout_width="80dp"
            android:layout_height="fill_parent"
            android:layout_alignTop="@+id/spProfile"
            android:layout_toRightOf="@+id/btnRemove"
            android:gravity="center"
            android:text="@string/load_default"
            android:textSize="10sp"
            android:id="@+id/btnLoadDefault"
            android:onClick="onBtnLoadDefault"/>
    </org.apmem.tools.layouts.FlowLayout>

    <ExpandableListView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/lvSettings"
        android:layout_below="@+id/profileBar"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
