<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".GamepadActivity">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/pnlButtons">
        <Button
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:onClick="onBtnCancel"
            />
        <Button
            android:id="@+id/btnApply"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/apply"
            android:layout_toRightOf="@id/btnCancel"
            android:onClick="onBtnApply"/>
    </RelativeLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/pnlButtons">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="@dimen/gamepad_cfg_tv_width"
                    android:layout_height="wrap_content"
                    android:text="@string/turn_cw_ccw"/>

                <TextView
                    android:layout_width="@dimen/gamepad_cfg_gap"
                    android:layout_height="wrap_content" />

                <ToggleButton
                    android:id="@+id/btnTurnCcw"
                    android:layout_width="@dimen/gamepad_cfg_btn_width"
                    android:layout_height="wrap_content"
                    android:textOn=""
                    android:textOff=""
                    android:onClick="onToggleBtn"/>
                <ToggleButton
                    android:id="@+id/btnTurnCw"
                    android:layout_width="@dimen/gamepad_cfg_btn_width"
                    android:layout_height="wrap_content"
                    android:textOn=""
                    android:textOff=""
                    android:onClick="onToggleBtn"/>
                <ProgressBar
                    android:id="@+id/pbTurnCwCcw"
                    style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_marginLeft="5dp"
                    android:progress="50"
                    android:max="100" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="@dimen/gamepad_cfg_tv_width"
                    android:layout_height="wrap_content"
                    android:text="@string/forward_backward"/>

                <TextView
                    android:layout_width="@dimen/gamepad_cfg_gap"
                    android:layout_height="wrap_content" />

                <ToggleButton
                    android:id="@+id/btnForward"
                    android:layout_width="@dimen/gamepad_cfg_btn_width"
                    android:layout_height="wrap_content"
                    android:textOn=""
                    android:textOff=""
                    android:onClick="onToggleBtn"/>
                <ToggleButton
                    android:id="@+id/btnBackward"
                    android:layout_width="@dimen/gamepad_cfg_btn_width"
                    android:layout_height="wrap_content"
                    android:textOn=""
                    android:textOff=""
                    android:onClick="onToggleBtn"/>
                <ProgressBar
                    android:id="@+id/pbFwdBck"
                    style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_marginLeft="5dp"
                    android:progress="50"
                    android:max="100" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="@dimen/gamepad_cfg_tv_width"
                    android:layout_height="wrap_content"
                    android:text="@string/left_right"/>

                <TextView
                    android:layout_width="@dimen/gamepad_cfg_gap"
                    android:layout_height="wrap_content" />

                <ToggleButton
                    android:id="@+id/btnLeft"
                    android:layout_width="@dimen/gamepad_cfg_btn_width"
                    android:layout_height="wrap_content"
                    android:textOn=""
                    android:textOff=""
                    android:onClick="onToggleBtn"/>
                <ToggleButton
                    android:id="@+id/btnRight"
                    android:layout_width="@dimen/gamepad_cfg_btn_width"
                    android:layout_height="wrap_content"
                    android:textOn=""
                    android:textOff=""
                    android:onClick="onToggleBtn"/>
                <ProgressBar
                    android:id="@+id/pbLeftRight"
                    style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_marginLeft="5dp"
                    android:progress="50"
                    android:max="100" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="@dimen/gamepad_cfg_tv_width"
                    android:layout_height="wrap_content"
                    android:text="@string/up_down"/>

                <TextView
                    android:layout_width="@dimen/gamepad_cfg_gap"
                    android:layout_height="wrap_content" />

                <ToggleButton
                    android:id="@+id/btnUp"
                    android:layout_width="@dimen/gamepad_cfg_btn_width"
                    android:layout_height="wrap_content"
                    android:textOn=""
                    android:textOff=""
                    android:onClick="onToggleBtn"/>
                <ToggleButton
                    android:id="@+id/btnDown"
                    android:layout_width="@dimen/gamepad_cfg_btn_width"
                    android:layout_height="wrap_content"
                    android:textOn=""
                    android:textOff=""
                    android:onClick="onToggleBtn"/>
                <ProgressBar
                    android:id="@+id/pbUpDown"
                    style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_marginLeft="5dp"
                    android:progress="50"
                    android:max="100" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="@dimen/gamepad_cfg_tv_width"
                    android:layout_height="wrap_content"
                    android:text="@string/disarm_motors"/>

                <TextView
                    android:layout_width="@dimen/gamepad_cfg_gap"
                    android:layout_height="wrap_content" />

                <ToggleButton
                    android:id="@+id/btnDisarm"
                    android:layout_width="@dimen/gamepad_cfg_btn_width"
                    android:layout_height="wrap_content"
                    android:textOn=""
                    android:textOff=""
                    android:onClick="onToggleBtn"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="@dimen/gamepad_cfg_tv_width"
                    android:layout_height="wrap_content"
                    android:text="@string/load1"/>

                <TextView
                    android:layout_width="@dimen/gamepad_cfg_gap"
                    android:layout_height="wrap_content" />

                <ToggleButton
                    android:id="@+id/btnLoad1"
                    android:layout_width="@dimen/gamepad_cfg_btn_width"
                    android:layout_height="wrap_content"
                    android:textOn=""
                    android:textOff=""
                    android:onClick="onToggleBtn"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="@dimen/gamepad_cfg_tv_width"
                    android:layout_height="wrap_content"
                    android:text="@string/load2"/>

                <TextView
                    android:layout_width="@dimen/gamepad_cfg_gap"
                    android:layout_height="wrap_content" />

                <ToggleButton
                    android:id="@+id/btnLoad2"
                    android:layout_width="@dimen/gamepad_cfg_btn_width"
                    android:layout_height="wrap_content"
                    android:textOn=""
                    android:textOff=""
                    android:onClick="onToggleBtn"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="@dimen/gamepad_cfg_tv_width"
                    android:layout_height="wrap_content"
                    android:text="@string/trick_mode_gyro"/>

                <TextView
                    android:layout_width="@dimen/gamepad_cfg_gap"
                    android:layout_height="wrap_content" />

                <ToggleButton
                    android:id="@+id/btnTrickGyro"
                    android:layout_width="@dimen/gamepad_cfg_btn_width"
                    android:layout_height="wrap_content"
                    android:textOn=""
                    android:textOff=""
                    android:onClick="onToggleBtn"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="@dimen/gamepad_cfg_tv_width"
                    android:layout_height="wrap_content"
                    android:text="@string/trick_mode_acro"/>

                <TextView
                    android:layout_width="@dimen/gamepad_cfg_gap"
                    android:layout_height="wrap_content" />

                <ToggleButton
                    android:id="@+id/btnTrickAcro"
                    android:layout_width="@dimen/gamepad_cfg_btn_width"
                    android:layout_height="wrap_content"
                    android:textOn=""
                    android:textOff=""
                    android:onClick="onToggleBtn"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="@dimen/gamepad_cfg_tv_width"
                    android:layout_height="wrap_content"
                    android:text="@string/turtle"/>

                <TextView
                    android:layout_width="@dimen/gamepad_cfg_gap"
                    android:layout_height="wrap_content" />

                <ToggleButton
                    android:id="@+id/btnTurtle"
                    android:layout_width="@dimen/gamepad_cfg_btn_width"
                    android:layout_height="wrap_content"
                    android:textOn=""
                    android:textOff=""
                    android:onClick="onToggleBtn"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="@dimen/gamepad_cfg_tv_width"
                    android:layout_height="wrap_content"
                    android:text="@string/cam0"/>

                <TextView
                    android:layout_width="@dimen/gamepad_cfg_gap"
                    android:layout_height="wrap_content" />

                <ToggleButton
                    android:id="@+id/btnCam0"
                    android:layout_width="@dimen/gamepad_cfg_btn_width"
                    android:layout_height="wrap_content"
                    android:textOn=""
                    android:textOff=""
                    android:onClick="onToggleBtn"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="@dimen/gamepad_cfg_tv_width"
                    android:layout_height="wrap_content"
                    android:text="@string/cam45"/>

                <TextView
                    android:layout_width="@dimen/gamepad_cfg_gap"
                    android:layout_height="wrap_content" />

                <ToggleButton
                    android:id="@+id/btnCam45"
                    android:layout_width="@dimen/gamepad_cfg_btn_width"
                    android:layout_height="wrap_content"
                    android:textOn=""
                    android:textOff=""
                    android:onClick="onToggleBtn"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="@dimen/gamepad_cfg_tv_width"
                    android:layout_height="wrap_content"
                    android:text="@string/cam90"/>

                <TextView
                    android:layout_width="@dimen/gamepad_cfg_gap"
                    android:layout_height="wrap_content" />

                <ToggleButton
                    android:id="@+id/btnCam90"
                    android:layout_width="@dimen/gamepad_cfg_btn_width"
                    android:layout_height="wrap_content"
                    android:textOn=""
                    android:textOff=""
                    android:onClick="onToggleBtn"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="@dimen/gamepad_cfg_tv_width"
                    android:layout_height="wrap_content"
                    android:text="@string/video_start_stop"/>

                <TextView
                    android:layout_width="@dimen/gamepad_cfg_gap"
                    android:layout_height="wrap_content" />

                <ToggleButton
                    android:id="@+id/btnVideo"
                    android:layout_width="@dimen/gamepad_cfg_btn_width"
                    android:layout_height="wrap_content"
                    android:textOn=""
                    android:textOff=""
                    android:onClick="onToggleBtn"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="@dimen/gamepad_cfg_tv_width"
                    android:layout_height="wrap_content"
                    android:text="@string/photo"/>

                <TextView
                    android:layout_width="@dimen/gamepad_cfg_gap"
                    android:layout_height="wrap_content" />

                <ToggleButton
                    android:id="@+id/btnPhoto"
                    android:layout_width="@dimen/gamepad_cfg_btn_width"
                    android:layout_height="wrap_content"
                    android:textOn=""
                    android:textOff=""
                    android:onClick="onToggleBtn"/>
            </LinearLayout>

        </LinearLayout>
        </ScrollView>
</RelativeLayout>
